# Collage

./: .gitexternals  .gitignore  .gitsubprojects  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  CHANGES.txt  CMakeLists.txt  CTestConfig.cmake  GNUmakefile  LICENSE.txt  README  README.md  build.bat
CMake/: CPackConfig.cmake  Collage.cmake  Collage.in.spec  Collage.spec  Common.cmake  Equalizer.spec  FindPackages.cmake  FindPackagesPost.cmake  FindRequired.cmake  PurpleAddLibrary.cmake  depends.txt
admin/: channel.cpp  window.h
co/: CMakeLists.txt  api.h  array.h  barrier.cpp  barrier.h  barrierCommand.h  buffer.cpp  buffer.h  bufferCache.cpp  bufferCache.h  bufferConnection.cpp  bufferConnection.h  bufferListener.h  co.h  command.cpp  command.h  commandCache.cpp  commandCache.h  commandFunc.h  commandQueue.cpp  commandQueue.h  commands.h  compressor.cpp  compressor.h  compressorInfo.h  configure.cmake  connection.cpp  connection.h  connectionDescription.cpp  connectionDescription.h  connectionListener.h  connectionSet.cpp  connectionSet.h  connectionType.h  connections.h  cpuCompressor.cpp  cpuCompressor.h  customCommand.cpp  customCommand.h  customICommand.cpp  (+162 more)
co/compressor/: compressor.cpp  compressor.h  compressorRLE.ipp  compressorRLE4BU.cpp  compressorRLEB.cpp  compressorSnappy.cpp
co/compressor/snappy/: snappy-stubs-internal.h  snappy.cc
co/plugins/: compressorTypes.h
doc/: CMakeLists.txt  Changelog.md  Doxyfile  README.IB  README.Linux  README.Win32  RELNOTES.md  RelNotes.md  RelNotes.md.in
lib/fabric/: packets.h
libs/: eq.h
libs/collage/: api.h
tests/: CMakeLists.txt  barrier.cpp  barrierException.cpp  barrierLatency.cpp  bufferCache.cpp  chunkPerf.cpp  command.cpp  commandCache.cpp  compressor.cpp  connection.cpp  customCommands.cpp  dataStream.cpp  dataStreamArchive.cpp  dispatcher.cpp  distributable.cpp  instanceCache.cpp  issue38.cpp  node.cpp  objectDistribution.cpp  objectMap.cpp  objectMaxVersions.cpp  objectPush.cpp  pipe.cpp  pipeperf.cpp  queue.cpp  test.h  zerobuf.cpp  zeroconf.cpp
tools/: CMakeLists.txt  netperf.cpp  nodeperf.cpp  objectperf.cpp
tools/netperf/: netperf.cpp
tools/nodeperf/: nodeperf.cpp
tools/perf/: netperf.cpp  nodeperf.cpp  objectperf.cpp
